# LambdaInterpreter

./: README.markdown  README.txt  build.bat  clean.bat  install.bat  package.cabal
data/: environment.txt  examples.txt  interpreter.glade
src/: HistoryWidget.hs  Lambda.hs  Main.hs  UI.hs
src/Data/: History.hs
src/Lambda/: Common.hs  Eval.hs  Parser.hs  Show.hs  Zipper.hs
src/Widget/: History.hs
windows-setup/: isetup.iss
